--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="css/style.css">
-		<title>Document</title>
-	</head>
-	<body>
-		<h1>Привіт</h1>
-      <div class="block">
-         <span class="block__item"></span>
-         <!--  -->
-         <div class="block__item red">
-            <h2>привіт!</h2>
-         </div>
-      </div>
-	</body>
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
+</head>
+<body>
+   <h1>Hello JS</h1>
+   <!-- <script>alert("Hello")</script> -->
+   <!-- <script>console.log("test")</script> -->
+   <script src="/js/script.js"></script>
+</body>
 </html>
